feat: add content in sections

--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -1,3 +1,21 @@
+/*
+*  html5resetcss
+*/
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
+body{line-height:1}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
+nav ul{list-style:none}
+blockquote,q{quotes:none}
+blockquote:before,blockquote:after,q:before,q:after{content:none}
+a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}
+ins{background-color:#ff9;color:#000;text-decoration:none}
+mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
+del{text-decoration:line-through}
+abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
+table{border-collapse:collapse;border-spacing:0}
+hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
+input,select{vertical-align:middle}
+
 html {
   box-sizing: border-box;
 }
@@ -118,3 +136,493 @@ html {
        url('../fonts/magra-v14-latin-700.svg#Magra') format('svg'); /* Legacy iOS */
 }
 
+/* for all elements */
+html {
+  font-family: 'Aleo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2rem;
+  color: #0D606F;
+}
+
+.wrapper {
+max-width: 1200px;
+margin: 0 7.5rem;
+}
+
+img. {
+  max-width: 100%;
+  height: auto;
+}
+
+/* media  */
+@media (max-width: 800px) {
+  html {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.2em;
+  }
+}
+
+@media (max-width: 500px) {
+  html {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.2em;
+  }
+}
+
+/* header style start */
+.header {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  max-height: 5.6rem;
+  width: 100%;
+  z-index: 10;
+
+  background-color: rgba(242, 120, 92, 0.7);
+  box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
+}
+
+.header__wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-around;
+  align-items: baseline;
+
+  margin: 0 7.5rem;
+  padding-top: 1.56em;
+  padding-bottom: 2.1em;
+
+}
+
+/* logo  */
+.header__logo {
+  flex-basis: 13.5rem;
+  
+}
+
+.header__logo-link {
+  font-family: 'Magra';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+ /* navigation  */
+.header__nav {
+  margin: 1em;
+
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.2em;
+  color: #ffffff;
+
+}
+
+.header__list {
+  display: flex;
+  flex-direction: row;
+  
+  list-style: none;
+}
+
+.header__list-item {
+  margin-right: 42px;
+}
+.header__list-item:last-child {
+  margin-right: 0;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.header__link:hover,
+.header__link:active,
+.header__link:focus {
+  opacity: 0.7;
+}
+
+/* button  */
+.header__button {
+  padding: 10px 30px;
+
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #ffffff;
+
+  background: #0D606F;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 2px 3px rgba(13, 96, 111, 0.16);
+}
+
+.header__button:hover,
+.header__button:focus,
+.header__button:active {
+  opacity: 0.7;
+  cursor: pointer;
+  box-shadow: none; 
+}
+
+/* header style end  */
+
+/* preview style start */
+.preview {
+  min-height: 100vh;
+  background: url(C:/Users/Lunarchelli/Desktop/Ангелина/RS-school/rsschool-cv/travel/images/intro-background-big.jpg) 
+  no-repeat center;
+  background-size: cover;
+  cursor: default;
+}
+
+.preview__title {
+  padding-top: 7.5rem;
+  margin-bottom: 0.57em;
+  max-width: 11.1em;
+  
+  font-family: 'Aleo' sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  
+  font-size: 5rem;
+  line-height: 6rem;
+  color: #ffffff;
+}
+
+.preview__subtitle {
+  margin-bottom: 1.91em;
+  
+  font-family: 'Aleo';
+  font-style: italic;
+  font-weight: 700;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+
+  color: #ffffff;
+}
+
+/* form  */
+.preview__form-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.preview__form {
+  max-height: 5.9rem;
+  max-width: 55.75rem;
+  padding: 1.12rem;
+
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 16px;
+}
+
+.preview__form .preview__form-input {
+  flex: 1;
+  padding-left: 2.05em;
+
+  font-family: 'Aleo';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #F2785C;
+
+  background: transparent;
+  border: 0;
+  outline: none;
+}
+
+::placeholder {
+  color: #F2785C;
+}
+
+.preview__form-button {
+  padding: 0.41em 1.3em;
+
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1.3em;
+  color: #ffffff;
+
+  background: #0D606F;
+  box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 
+  0px 2px 3px rgba(13, 96, 111, 0.16);
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* preview style end */
+
+/* steps style start */
+.steps {
+  margin-top: 2em;;
+}
+
+.steps-wrapper {
+background-color: #ffffff;
+}
+
+.h2__title {
+  text-align: center;
+  font-family: 'Red Hat Text';
+  text-transform: uppercase;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 2.5rem;
+  line-height: 1.3em;
+  color: #F2785C;
+}
+
+.steps__title {
+  margin-bottom: 1em;
+}
+
+.steps__icons {
+  display: grid;
+  grid-gap: 1.87rem;
+  grid-template: repeat(2, 1fr) / repeat(3, 1fr);
+  justify-items: center;
+ 
+}
+
+.steps__items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: rgba(242, 120, 92, 1);
+  height: 6.25rem;
+  width: 6.25rem;
+  border-radius: 1rem;
+}
+
+.steps__items-image {
+  max-width: 3.12rem;
+  max-height: 2.81rem;
+  margin: 1.75rem 1.56rem;
+}
+
+.steps__discription {
+  font-family: 'Aleo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 1.3em;
+
+  text-align: center;
+}
+/* steps style end */
+
+/* destination style start */
+.destinations {
+  padding-bottom: 5rem;
+  margin-bottom: 5rem;
+}
+
+.destinations__title {
+  margin-bottom: 1em;
+}
+
+.destination-images {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+ .destination__img {
+  max-width: 40rem;
+  max-height: 40rem;
+  margin-right: 3.75rem;
+  border-radius: 1rem;
+ }
+
+ .destination__image-wrapper {
+  position: relative;
+  margin-bottom: 1.5rem;
+ }
+
+ .destination__image-desc {
+  position: absolute;
+  width: 108px;
+  height: 42px;
+  left: 1rem;
+  top: 88%;
+
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 2rem;
+  line-height: 1.3em;
+  color: #FFFFFF;
+ }
+
+ .section__button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 32px;
+  gap: 10px;
+  margin: 0 auto;
+
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
+
+  color: #FFFFFF;
+  border: none;
+  background: #0D606F;
+  box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+  border-radius: 10px;
+ }
+
+/* destination style end */
+
+.background-wrapper {
+  position: relative;
+  max-width: 100%;
+  height: 85rem;
+  max-height: 100%;
+  background: url(../images/footage-background.jpg) no-repeat 100% center;
+  object-fit: cover;
+  
+}
+
+.background-wrapper::before {
+  height: 82rem;
+  width: 100%;
+  display: block;
+  content: '';
+  background-color: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  top: 0;
+ 
+}
+
+/* stories style start */
+
+.stories {
+  position: absolute;
+  top: 0;
+  transform: translateY(-10rem);
+  max-height: 100vh;
+}
+
+.stories__title {
+  padding-top: 5rem;
+  padding-bottom: 3.25rem;
+  margin-bottom: 2.5rem;
+  width: 100%;
+}
+
+.section__grid-container {
+  display: grid;
+  grid-template:  repeat(3, 1fr);
+  row-gap: 1.87rem;
+
+  
+}
+.stories__img {
+  max-width: 25rem;
+  filter: drop-shadow(0px 4px 4px #0D606F);
+  border-radius: 1rem;
+  object-fit: cover;
+}
+ .stories__image-desc {
+  grid-column: span2;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  
+  max-width:  46.5rem;
+  padding-left: 2.5rem;
+  overflow: hidden;
+ }
+
+ .stories__image-desc--title {
+  font-weight: 400;
+  font-size: 2.25rem;
+  margin-bottom: 1.5rem;
+ }
+
+ .stories__image-desc--p {
+  font-size: 1.25rem;
+ }
+
+.stories__image-desc--ref {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.25rem;
+  
+  color: #0D606F;
+}
+
+.stories__button {
+  margin-top: 2.5rem;
+  margin-bottom: 3.5rem;
+}
+/* stories style end */
+
+/* footer style start */
+.footer__wrap {
+  position: relative;
+  transform: translateY(-3.2rem);
+  background: inherit;
+}
+
+.footer__grid-container {
+  display: grid;
+  margin-bottom: 0;
+  grid-template-areas: "item-1 item-2 item-3";
+  justify-items: center;
+  align-items: center;
+}
+
+.footer__ref {
+  padding: 1.25rem;
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1rem;
+  grid-area: item-2;
+
+  color: #FFFFFF;
+}
+
+.footer__section {
+  grid-area: item-3;
+}
+
+.footer_icon-img {
+  max-width: 2.1rem;
+  max-height: 2.1rem;
+  margin-right: 1.25rem;
+
+}
+/* footer style end */
