--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -178,6 +178,13 @@ img {
   }
 }
 
+@media (max-width: 1000px) {
+  .stories__image-desc--p {
+   font-size: 10px;
+   
+  }
+}
+
 /* header style start */
 .header {
   position: fixed;
@@ -488,6 +495,21 @@ background-color: #ffffff;
   color: #FFFFFF;
  }
 
+ .destinations__circle-wrapper {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 2.5rem;
+  justify-content: center;
+ }
+
+ .destinations__circle{
+  height: 1.25rem;
+  width: 1.25rem;
+  border-radius: 50%;
+  margin-right: 0.62rem;
+  background-color: #F2785C;
+  cursor: pointer;
+ }
  .section__button {
   display: flex;
   flex-direction: row;
@@ -562,7 +584,7 @@ background-color: #ffffff;
 
 .section__grid-container {
   display: grid;
-  grid-template: 15.62rem / 25rem 1fr;
+  grid-template: 15.62rem / 25rem auto;
   row-gap: 1.87rem;
   column-gap: 2.5rem;
 }
@@ -633,14 +655,12 @@ background-color: #ffffff;
   justify-content: center;
 }
 
+.footer__section-ref {
+  display: flex;
+  justify-content: center;
+}
+
 .footer__ref {
-  position: absolute;
-  bottom: 1.5rem;
-  left: 41%;
- 
-  width: 16.25rem;
-
-
   font-family: 'Red Hat Text';
   font-style: normal;
   font-weight: 500;
