--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -661,6 +661,8 @@ background-color: #ffffff;
 }
 
 .footer__ref {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
   font-family: 'Red Hat Text';
   font-style: normal;
   font-weight: 500;
